-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22
-
Component/s: core-libs
-
b04
-
generic
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8364651 | 25.0.2 | Shruthi Acharya | P4 | Resolved | Fixed | b01 |
| JDK-8375190 | 21.0.11 | Shruthi Acharya | P4 | Resolved | Fixed | b01 |
The test java/net/Socket/asyncClose/Race.java fails intermittently on AIX with timeouts.
In the log we see
"AgentVMThread" #38 [4641] prio=5 os_prio=57 cpu=196.97ms elapsed=1081.85s tid=0x00000001166d7950 nid=4641 runnable [0x0000000117a4c000]
java.lang.Thread.State: RUNNABLE
Thread: 0x00000001166d7950 [0x1221] State: _at_safepoint _at_poll_safepoint 0
JavaThread state: _thread_in_native
at sun.nio.ch.UnixDispatcher.preClose0(java.base@22-internal/Native Method)
at sun.nio.ch.SocketDispatcher.preClose(java.base@22-internal/SocketDispatcher.java:74)
at sun.nio.ch.NioSocketImpl.close(java.base@22-internal/NioSocketImpl.java:911)
- locked <0x00000000ffc5a398> (a java.lang.Object)
at java.net.SocksSocketImpl.close(java.base@22-internal/SocksSocketImpl.java:556)
at java.net.Socket.close(java.base@22-internal/Socket.java:1750)
- locked <0x00000000ffc5a2d8> (a java.lang.Object)
at Race.main(Race.java:76)
at java.lang.invoke.LambdaForm$DMH/0x0000000060082800.invokeStatic(java.base@22-internal/LambdaForm$DMH)
at java.lang.invoke.LambdaForm$MH/0x0000000060149400.invoke(java.base@22-internal/LambdaForm$MH)
at java.lang.invoke.LambdaForm$MH/0x0000000060149800.invokeExact_MT(java.base@22-internal/LambdaForm$MH)
at jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(java.base@22-internal/DirectMethodHandleAccessor.java:154)
at jdk.internal.reflect.DirectMethodHandleAccessor.invoke(java.base@22-internal/DirectMethodHandleAccessor.java:103)
at java.lang.reflect.Method.invoke(java.base@22-internal/Method.java:580)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:333)
at java.lang.Thread.runWith(java.base@22-internal/Thread.java:1583)
at java.lang.Thread.run(java.base@22-internal/Thread.java:1570)
so it might be somehow related to preClose0 ?
We see also a LOT of threads like this :
"Thread-1019" #1075 [36657] prio=5 os_prio=57 cpu=0.03ms elapsed=720.70s tid=0x000000011773bb10 nid=36657 waiting on condition [0x000000012932c000]
java.lang.Thread.State: WAITING (parking)
Thread: 0x000000011773bb10 [0x8f31] State: _at_safepoint _at_poll_safepoint 0
JavaThread state: _thread_blocked
at jdk.internal.misc.Unsafe.park(java.base@22-internal/Native Method)
- parking to wait for <0x00000000fe0f90b0> (a java.util.concurrent.locks.ReentrantLock$NonfairSync)
at java.util.concurrent.locks.LockSupport.park(java.base@22-internal/LockSupport.java:221)
at java.util.concurrent.locks.AbstractQueuedSynchronizer.acquire(java.base@22-internal/AbstractQueuedSynchronizer.java:754)
at java.util.concurrent.locks.AbstractQueuedSynchronizer.acquire(java.base@22-internal/AbstractQueuedSynchronizer.java:990)
at java.util.concurrent.locks.ReentrantLock$Sync.lock(java.base@22-internal/ReentrantLock.java:153)
at java.util.concurrent.locks.ReentrantLock.lock(java.base@22-internal/ReentrantLock.java:322)
at sun.nio.ch.NioSocketImpl.read(java.base@22-internal/NioSocketImpl.java:339)
at sun.nio.ch.NioSocketImpl$1.read(java.base@22-internal/NioSocketImpl.java:796)
at java.net.Socket$SocketInputStream.read(java.base@22-internal/Socket.java:1099)
at java.net.Socket$SocketInputStream.read(java.base@22-internal/Socket.java:1093)
at Race$1.run(Race.java:63)
Maybe the test should be excluded until the AIX issues are resolved.
In the log we see
"AgentVMThread" #38 [4641] prio=5 os_prio=57 cpu=196.97ms elapsed=1081.85s tid=0x00000001166d7950 nid=4641 runnable [0x0000000117a4c000]
java.lang.Thread.State: RUNNABLE
Thread: 0x00000001166d7950 [0x1221] State: _at_safepoint _at_poll_safepoint 0
JavaThread state: _thread_in_native
at sun.nio.ch.UnixDispatcher.preClose0(java.base@22-internal/Native Method)
at sun.nio.ch.SocketDispatcher.preClose(java.base@22-internal/SocketDispatcher.java:74)
at sun.nio.ch.NioSocketImpl.close(java.base@22-internal/NioSocketImpl.java:911)
- locked <0x00000000ffc5a398> (a java.lang.Object)
at java.net.SocksSocketImpl.close(java.base@22-internal/SocksSocketImpl.java:556)
at java.net.Socket.close(java.base@22-internal/Socket.java:1750)
- locked <0x00000000ffc5a2d8> (a java.lang.Object)
at Race.main(Race.java:76)
at java.lang.invoke.LambdaForm$DMH/0x0000000060082800.invokeStatic(java.base@22-internal/LambdaForm$DMH)
at java.lang.invoke.LambdaForm$MH/0x0000000060149400.invoke(java.base@22-internal/LambdaForm$MH)
at java.lang.invoke.LambdaForm$MH/0x0000000060149800.invokeExact_MT(java.base@22-internal/LambdaForm$MH)
at jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(java.base@22-internal/DirectMethodHandleAccessor.java:154)
at jdk.internal.reflect.DirectMethodHandleAccessor.invoke(java.base@22-internal/DirectMethodHandleAccessor.java:103)
at java.lang.reflect.Method.invoke(java.base@22-internal/Method.java:580)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:333)
at java.lang.Thread.runWith(java.base@22-internal/Thread.java:1583)
at java.lang.Thread.run(java.base@22-internal/Thread.java:1570)
so it might be somehow related to preClose0 ?
We see also a LOT of threads like this :
"Thread-1019" #1075 [36657] prio=5 os_prio=57 cpu=0.03ms elapsed=720.70s tid=0x000000011773bb10 nid=36657 waiting on condition [0x000000012932c000]
java.lang.Thread.State: WAITING (parking)
Thread: 0x000000011773bb10 [0x8f31] State: _at_safepoint _at_poll_safepoint 0
JavaThread state: _thread_blocked
at jdk.internal.misc.Unsafe.park(java.base@22-internal/Native Method)
- parking to wait for <0x00000000fe0f90b0> (a java.util.concurrent.locks.ReentrantLock$NonfairSync)
at java.util.concurrent.locks.LockSupport.park(java.base@22-internal/LockSupport.java:221)
at java.util.concurrent.locks.AbstractQueuedSynchronizer.acquire(java.base@22-internal/AbstractQueuedSynchronizer.java:754)
at java.util.concurrent.locks.AbstractQueuedSynchronizer.acquire(java.base@22-internal/AbstractQueuedSynchronizer.java:990)
at java.util.concurrent.locks.ReentrantLock$Sync.lock(java.base@22-internal/ReentrantLock.java:153)
at java.util.concurrent.locks.ReentrantLock.lock(java.base@22-internal/ReentrantLock.java:322)
at sun.nio.ch.NioSocketImpl.read(java.base@22-internal/NioSocketImpl.java:339)
at sun.nio.ch.NioSocketImpl$1.read(java.base@22-internal/NioSocketImpl.java:796)
at java.net.Socket$SocketInputStream.read(java.base@22-internal/Socket.java:1099)
at java.net.Socket$SocketInputStream.read(java.base@22-internal/Socket.java:1093)
at Race$1.run(Race.java:63)
Maybe the test should be excluded until the AIX issues are resolved.
- backported by
-
JDK-8364651 java/net/Socket/asyncClose/Race.java fails intermittently (aix)
-
- Resolved
-
-
JDK-8375190 java/net/Socket/asyncClose/Race.java fails intermittently (aix)
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/6201b183
-
Commit(master)
openjdk/jdk25u/5f2a45c3
-
Commit(master)
openjdk/jdk/8f121a17
-
Review(master)
openjdk/jdk21u-dev/2543
-
Review(master)
openjdk/jdk25u/47
-
Review(master)
openjdk/jdk/25817
(3 links to)