8317801: java/net/Socket/asyncClose/Race.java fails intermittently on AIX

Resolved a race condition in socket close handling that led to intermittent failures in Race.java on AIX

Signed-off-by: Shruthi <Shruthi.Shruthi1@ibm.com>