src/java.base/unix/classes/sun/nio/ch/NativeThread.java
@@ -78,6 +78,17 @@ public class NativeThread {
         return (tid == VIRTUAL_THREAD_ID);
     }
 
+    /**
+     * Return true if the operating system supports pending signals. If a signal is sent
+     * to a thread but cannot be delivered immediately then it will be delivered when the
+     * thread is in the appropriate state.
+     */
+    static boolean supportPendingSignals() {
+        return supportPendingSignals0();
+    }
+
+    private static native boolean supportPendingSignals0();
+
     // Returns an opaque token representing the native thread underlying the
     // invoking Java thread.  On systems that do not require signalling, this
     // method always returns 0.
